# fwatch

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md  bacon.toml
.cargo/: config.toml
src/: app.rs  config.rs  lib.rs  main.rs
