[package]
name = "fsync"
version = "0.1.0"
edition = "2021"
authors = ["Alex Sokolov"]
description = "CLI tool for directory synchronization"
readme = "README.md"
repository = "https://github.com/aOri69/FileWatcher.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.153"

# [target.'cfg(windows)'.dependencies]
# windows = { version = "0.52.0", features = ["Win32_Foundation", "Win32_System_IO", "Win32_Storage_FileSystem", "Win32_System_Threading", "Win32_Security"] }

[profile.release]
# opt-level = "z"
# strip = "debuginfo"
opt-level = 2
strip = true
panic = "abort"
lto = true